# speedrun

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
speedrun/: __init__.py  __main__.py  celery.py  conftest.py  settings.py  tasks.py
speedrun/auth/: auth.py  permission_checker.py
speedrun/db/: base.py  dependencies.py  internal_db.py  utils.py
speedrun/db/models/: __init__.py  event_logs.py  trigger.py
speedrun/dependencies/: dependencies.py
speedrun/dtos/: event_logs.py  user.py
speedrun/repo/: event_logs.py  trigger.py
speedrun/services/: __init__.py  event_logs.py  trigger.py
speedrun/services/redis/: lifetime.py
speedrun/tests/: __init__.py
speedrun/web/: __init__.py  application.py  lifetime.py
speedrun/web/api/: __init__.py  router.py
speedrun/web/api/monitoring/: __init__.py  views.py
speedrun/web/api/triggers/: __init__.py  api.py  schema.py
